# AntsSimulator

./: .gitignore  CMakeLists.txt  SimpleVertexShader.vertexshader  conanfile.txt  shaders.cpp  texture_load.cpp
AntsSimulator/: ant.cpp  ant.h  controls.cpp  display.cpp  food.cpp  food.h  nest.cpp  nest.h  objects.cpp  objects.h  shaders.cpp  texture_load.cpp  texture_load.h  trace.cpp  trace.h
Resources/: SimpleVertexShader.vertexshader  ant.DDS
